<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locations"
            android:fontFamily="@font/poppins"
            android:textFontWeight="700"
            android:textSize="16sp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="2"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus"
            android:fontFamily="@font/poppins"
            android:textFontWeight="700"
            android:textSize="16sp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"/>

        <FrameLayout
            android:id="@+id/fragment_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>